@@ -18,7 +18,7 @@
 
 	<li>Your password or e-mail address will not be shared with other users, business partners or the public at large.</li>
 
-	<li>OpenFlights may choose to display or aggregate your flights in anonymized format.</li>
+	<li>OpenFlights may display, package, and provide for reuse your flights, as well as any airports or airlines added by you, in an anonymized format.  (See <a href="/data.html">Databases</a> for details.</li>
 
 	<li>OpenFlights will comply with court orders to turn over your private information.</li>
 
