@@ -11,7 +11,9 @@ dst_apid INT,
 codeshare TEXT,
 stops TEXT,
 equipment TEXT,
+added VARCHAR(1),
 rid INT AUTO_INCREMENT PRIMARY KEY,
+UNIQUE INDEX (alid, src_apid, dst_apid),
 FOREIGN KEY (src_apid) REFERENCES airports (apid),
 FOREIGN KEY (dst_apid) REFERENCES airports (apid),
 FOREIGN KEY (alid) REFERENCES airlines (alid)
